refactor: services의 animal.py를 animal_introduction.py와 animal.recommendation.py로 쪼개는 리팩토링 진행